fix: update gap to 16px

--- a/app/javascript/pages/inviteTo/invite-to.module.scss
+++ b/app/javascript/pages/inviteTo/invite-to.module.scss
@@ -205,7 +205,7 @@
     flex-direction: column;
     padding: var(--seeds-spacer-section);
     background: var(--seeds-color-primary-lighter);
-    gap: var(--seeds-spacer-text);
+    gap: var(--seeds-s4);
   }
 }
 
